--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,6 +11,6 @@ main:
   - title: "About Me"
     url: /#about
   - title: "News"
-    url: /news/
+    url: /#news/
   - title: "Publications"
-    url: /publications/
+    url: /#publications/
