--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,6 +13,6 @@ main:
   - title: "Education"
     url: /#education
   - title: "News"
-    url: /#news/
+    url: /#news
   - title: "Publications"
-    url: /#publications/
+    url: /#publications
