--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Yujie Fu"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "a second-year master student"
   location         : "Beijing"
   employer         : "Peking Union Medical College"
   uri              : # URL
